# serialization_intro

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: collection.cpp  collection.hpp  main.cpp  thingee.cpp  thingee.hpp
